2006-12-10 Emmanuel Dreyfus  <manu@netbsd.org>
	From Joy Latten <latten@austin.ibm.com>
	* src/racoon/Makefile.am
	  src/racoon/doc/README.plainrsa: new file documenting plain RSA auth

2006-12-09 Emmanuel Dreyfus  <manu@netbsd.org>
	From Joy Latten <latten@austin.ibm.com>
	* configure.ac src/libipsec/{libpfkey.h|pfkey.c}
	  src/racoon/{Makefile.am|backupsa.c|backupsa.h|cftoken.l|ipsec_doi.c}
	  src/racoon/{ipsec_doi.h|isakmp_inf.c|isakmp_quick.c|pfkey.c|policy.c}
	  src/racoon/{policy.h|proposal.c|proposal.h|remoteconf.c}: Add 		  support for SELinux security contexts. Also cleanup the libipsec
	  interface for adding and updating security associations.

	From Simon Chang <simonychang@gmail.com>
	* src/racoon/racoon.conf.5: More hints about plain RSA authentication

2006-12-05  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/proposal.[ch]: Check keys length regarding
	  pcheck_level in cmpsatrns().
	* src/racoon/racoon.conf.5: updated man page about what is
	  impacted by proposal_check level.

2006-11-12  Matthew Grooms <mgrooms@shrew.net>
	* src/racoon/sainfo.c: fix anonymous sainfo selection.

2006-10-22  Yvan Vanhullebus  <vanhu@netasq.com>
	From Michal Ruzicka <michal.ruzicka@comstar.cz>:
	* src/racoon/{backupsa.c|cfparse.y}: fixed typos.

2006-10-19  Yvan Vanhullebus  <vanhu@netasq.com>
	From Matthew Grooms:
	* src/racoon/ipsec_doi.[ch]: Added ipsecdoi_chkcmpids() function
	* src/racoon/sainfo.c: uses ipsecdoi_chkcmpids() and changed
	src/dst to loc/rmt in getsainfo().
	
2006-10-09  Emmanuel Dreyfus  <manu@netbsd.org>
	* src/racoon/isakmp_unity.c: correctly check read() return (Coverity)
	* src/racoon/proposal.c: Fix memory leak (Coverity)

2006-10-06  Emmanuel Dreyfus  <manu@netbsd.org>
	From Tomoyuki Okazaki <okazaki@kick.gr.jp>
	* configure.ac src/libipsec/pfkey_dump.c
	  src/racoon/{algorithm.c|algorithm.h|cftoken.l|crypto_openssl.c}
	  src/racoon/{crypto_openssl.h|eaytest.c|ipsec_doi.c|ipsec_doi.h}